--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -32,23 +32,15 @@ jobs:
 
     # Deploy to Bunny CDN using FTP
     - name: Deploy to Bunny CDN
-      env:
+    env:
         BUNNY_FTP_HOST: ${{ secrets.BUNNY_FTP_HOST }}
         BUNNY_FTP_USERNAME: ${{ secrets.BUNNY_FTP_USERNAME }}
         BUNNY_FTP_PASSWORD: ${{ secrets.BUNNY_FTP_PASSWORD }}
-      run: |
-        # Create .netrc file for FTP authentication
-        echo "machine $BUNNY_FTP_HOST" > $HOME/.netrc
-        echo "login $BUNNY_FTP_USERNAME" >> $HOME/.netrc
-        echo "password $BUNNY_FTP_PASSWORD" >> $HOME/.netrc
-        chmod 600 $HOME/.netrc
-
-        # Upload files using lftp with verbose output
-        lftp -c "
-        set ssl:verify-certificate no;
-        set ftp:ssl-protect-data true;
-        set ftp:ssl-force true;
-        set xfer:log yes;
-        open $BUNNY_FTP_HOST;
-        mirror -R --delete-first --parallel=10 --verbose dist/ /;
-        "
+    run: |
+        lftp -u "$BUNNY_FTP_USERNAME","$BUNNY_FTP_PASSWORD" "$BUNNY_FTP_HOST" <<EOF
+        set ssl:verify-certificate no
+        set ftp:ssl-force true
+        set ftp:ssl-protect-data true
+        mirror -R ./dist/ /
+        bye
+    EOF
